# catwalk-plus

./: CMakeLists.txt  LICENSE  README.md
org.kde.plasma.catwalk/: metadata.desktop  metadata.json
org.kde.plasma.catwalk+/: metadata.json
org.kde.plasma.catwalk+/contents/config/: main.xml
org.kde.plasma.catwalk+/contents/ui/: CompactRepresentation.qml
org.kde.plasma.catwalk+/contents/ui/config/: ConfigGeneral.qml
org.kde.plasma.catwalk/contents/config/: main.xml
org.kde.plasma.catwalk/contents/ui/: CompactRepresentation.qml  main.qml
org.kde.plasma.catwalk/contents/ui/config/: ConfigGeneral.qml
